--- a/client/src/components/datos/PagoMetamask/PagoMetamask.module.css
+++ b/client/src/components/datos/PagoMetamask/PagoMetamask.module.css
@@ -1,24 +1,28 @@
 
 
 .container{
+    scale: 0.85;
     display: flex;
-    position: absolute;
-    flex-direction: column;
     align-items: center;
-    right: 6.4%; 
-    top: 28%;
+    flex-direction: column;
+    z-index:99997;
+    right: 0.55%; 
+    width: 20px;
+    height: 100px;
+    margin-top: 4%;
     
 }
 
 
 
 .img{
+    
     border: 2px solid rgb(255, 255, 255);
     width: 30px;
     height: 30px;
     border-radius: 100%;
     transition: transform 0.5s;
-    margin-bottom: -10%;
+    margin-bottom: -90%;
 }
 
 .img:hover{
@@ -28,10 +32,11 @@
 }
 
   
-.conectada{
+.conectada{    
+
     color: rgb(20, 255, 196);
     text-shadow: 1px 1px 1px  black;
-    margin-bottom:-20%;
+    margin-bottom:-16%;
 }
 
 .desconectada{
