--- a/client/src/components/views/Shop/Shop.module.css
+++ b/client/src/components/views/Shop/Shop.module.css
@@ -1,7 +1,9 @@
 .component {
+  padding: 2px ;
+  padding-bottom: 10%;
+  padding-top: 10%;
   margin-top: var(--navBarHeight);
   min-height: calc(100vh - var(--navBarHeight));
-  padding-bottom: 20vh;
   display: flex;
   flex-direction: column;
   animation: blur-in 0.8s ease;
@@ -19,31 +21,70 @@
 /* __________________________________________________ */
 
 .section2, .section3 {
+  margin-top: 1.2%;
   display: flex;
-  width: 98%;
   align-self: center;
-
-  border: 1px solid black
+}
+  .sectionBanner {
+    display: flex;
+    position: fixed;
+    top:12%;
+    left: 0;
+    flex-direction: row;
+    align-items: center;
+    transition: transform 0.3s, filter 0.3s;
+    }
+  
+    .bannerImg {
+      width: 100px;
+      height:100px;
+      border-radius: 50%;
+    }
+  .input{
+    text-shadow:black;
+    
   }
+  .input:hover{
+    background-color:7px solid #a1f7be7c;
+  }
+    .searchButton {
+      margin-right:15%; 
+      transition: transform 0.3s, filter 0.3s;
+      background-color:#a1f7be7c;
+    } 
+    .searchButton:hover{
+      transform: scale(1.1);
+      }
+    
+
   .sidebar {
     display: flex;
-    flex-direction: column;
-    height: 50vh;
-    width: 25vw;
-    border: 1px solid blue;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    margin-bottom: 25px;
+    height:25%;
+    width: 16.2%;
+    border: 4px solid rgba(0, 0, 0, 0.096);
+    background-color:#a1f7be7c;
+    transition: transform 0.3s, filter 0.3s,width 0.2s;
+   border-radius: 5%;
+   
+  }
+  .sidebar > div {
+    margin-bottom: 15px;
+  }
+  .sidebar:hover {
+    transform: scale(1.1);
+    width: 20%;
+    transform-origin: left;
     }
-
-    .filterCategory {
-      display: flex;
-      flex-direction: column;
-      flex-wrap: wrap;
-    }
-    .filterCategory input {
+    
+   .sidebar input {
       margin: 0;
       width: 1rem;
       cursor: pointer;
       height: 1rem;
-      padding: 0;
     }
 
   .productBox {
@@ -68,12 +109,14 @@
       transition: transform 0.3s, filter 0.3s;
     }
     .item:hover {
-      transform: scale(1.2);
+      transform: scale(1.1);
+      
       }
       .item img {
         width: 100px;
         height: 100px;
         object-fit: contain;
+       
       }
       .name {
         font-size: 14px;
@@ -82,6 +125,7 @@
       }
       .price {
         font-size: 100%;
+        margin-top: 2%;
         margin-bottom: 5px;
         color: #007bff;
         font-weight: bold;
@@ -108,29 +152,32 @@
 
         .cartTooltip {
             position: absolute;
+            
             padding: 1%;
             margin-left: 30%;
             background-color: #007bff;
             color: #fff;
             border-radius: 4px;
-            font-size: 14px;
+            font-size: 16px;
             transition: transform 0.3s;
+        
         }
         .item:hover .cartTooltip {
+          margin-top: 83%;
             transform: translate(-50%, 10%);
-            animation: slide-in-right 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+            animation: slide-in-right 0.7s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
         }  @keyframes slide-in-right {
             0% {
-                transform: translateX(4px) translateY(-25px);
+                transform: translateX(4px) translateY(-75%);
                 opacity: 0;
             }
             100% {
-                transform: translateX(-2px) translateY(-25px);
+                transform: translateX(-18px) translateY(-75%);
                 opacity: 1;
             }
         }
 
-.section4 {
+.Resumen {
   display: flex;
   justify-content: space-around;
   background-color: #e9e1e1b1;
@@ -156,28 +203,3 @@
   padding: 5%;
 }
 
-
-/*
-
-.h1light {
-  color: rgb(0, 140, 158);
-  transition: transform 0.3s, filter 0.3s;
-  justify-content: center;
-  align-items: center;
-  display: flex;
-  text-shadow: 2px 3.5px 2px rgba(0, 221, 250, 0.672);
-}
-
-.h1light:hover {
-  transform: scale(1.2);
-  transform-origin: center;
-}
-
-.containerItems {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-  grid-gap: 20px;
-  justify-items: center;
-  padding: 5%;
-}
-*/
