--- a/client/src/components/views/Shop/Shop.module.css
+++ b/client/src/components/views/Shop/Shop.module.css
@@ -1,7 +1,6 @@
 .component {
   padding: 2px ;
   padding-bottom: 10%;
-  padding-top: 10%;
   margin-top: var(--navBarHeight);
   min-height: calc(100vh - var(--navBarHeight));
   display: flex;
@@ -27,17 +26,15 @@
 }
   .sectionBanner {
     display: flex;
-    position: fixed;
-    top:12%;
-    left: 0;
-    flex-direction: row;
     align-items: center;
-    transition: transform 0.3s, filter 0.3s;
-    }
+    padding-bottom: 2%;
+  }
   
     .bannerImg {
-      width: 100px;
-      height:100px;
+      width: 150px;
+      height:150px;
+      margin-right: 2%;
+      margin-left: 1%;
       border-radius: 50%;
     }
   .input{
@@ -93,6 +90,7 @@
     flex-wrap: wrap;
     gap: 10px;
     padding: min(2%);
+    margin-top: -5%;
     width: 100%;
     height: 20%;
     }
