--- a/client/src/components/views/Shop/Shop.module.css
+++ b/client/src/components/views/Shop/Shop.module.css
@@ -44,13 +44,22 @@
   .input:hover{
     background-color:7px solid #a1f7be7c;
   }
+
+  .flex{
+    margin-left: 1%;
+    display: flex;
+    height: 30px;
+    align-items: center;
+  }
     .searchButton {
-      margin-right:15%; 
+      width: 20px;
+      margin-left: 1%;
       transition: transform 0.3s, filter 0.3s;
       background-color:#a1f7be7c;
     } 
     .searchButton:hover{
-      transform: scale(1.1);
+      cursor: pointer;
+      transform: scale(1.2);
       }
     
 
