--- a/client/src/components/bars/navBar/navBar.module.css
+++ b/client/src/components/bars/navBar/navBar.module.css
@@ -45,3 +45,23 @@
     .link-dark {
       color: rgba(247, 249, 250, 0.932);
     }
+
+.shopbagOverlay {
+    z-index: 9998;
+    top: 10vh;
+    position: fixed;
+    height: 90vh;
+    width: 100vw;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.shopbag {
+    top: 10vh;
+    z-index: 9999;
+    background-color: blue;
+    width: 30vw;
+    height: 90vh;
+    right: 0;
+    position: fixed;
+    border: 1px solid black;
+}
