--- a/client/src/components/datos/Bag/Bag.module.css
+++ b/client/src/components/datos/Bag/Bag.module.css
@@ -5,24 +5,25 @@
   bottom: 0;
   z-index: 9998;
   width: 100vw;
-  animation:scale-up-horizontal-right 0.4s } 
-  @keyframes scale-up-horizontal-right{0%{transform:scaleX(.4);transform-origin:right center}100%{transform:scaleX(1);transform-origin:right center}}
-  
+ }   
   
   .shopbag {
     top: var(--navBarHeight);
     right: 0;
-    min-height: calc(100vh - var(--navBarHeight));
+    min-height: calc(90vh - var(--navBarHeight));
+    max-height: calc(90vh - var(--navBarHeight));
     width: 25vw;
     position: fixed;
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 2vw 0;
+    padding: 5vh 0;
     gap: 10px;
     z-index: 9999;
     overflow-y: auto;
-  }
+    animation:scale-up-horizontal-right 0.4s
+  } @keyframes scale-up-horizontal-right{0%{transform:scaleX(.4);transform-origin:right center}100%{transform:scaleX(1);transform-origin:right center}}
+
   .shopbag-light {
     background-color: white;
     box-shadow: rgba(0, 0, 0, 0.50) 20px 0 0;
