--- a/client/src/components/datos/PagoMetamask/PagoMetamask.module.css
+++ b/client/src/components/datos/PagoMetamask/PagoMetamask.module.css
@@ -1,50 +1,41 @@
 
 
 .container{
-    scale: 0.85;
     display: flex;
     align-items: center;
-    flex-direction: column;
-    z-index:99997;
-    right: 0.55%; 
-    width: 20px;
-    height: 100px;
-    margin-top: 4%;
+    height: 28px;
+    padding: 4%;
+    width: 92%;
+    background-color: rgb(248, 172, 7);
+    border-radius: 6%;
     
+}
+.container:hover{
+    background-color: rgb(199, 142, 20);
+    cursor: pointer;
+
 }
 
 
 
 .img{
-    
-    border: 2px solid rgb(255, 255, 255);
-    width: 30px;
-    height: 30px;
+    padding-left: 8%;
+
+    width: 40px;
+    height: 40px;
     border-radius: 100%;
     transition: transform 0.5s;
-    margin-bottom: -90%;
 }
 
-.img:hover{
-    cursor: pointer;
-    transform: scale(1.3);
 
+
+
+.txt{
+    margin-left: 5%;
+    font-size: 16px;
 }
+.paymentButton{
+    width: 150px;
+    font-size: 16px;
 
-  
-.conectada{    
-
-    color: rgb(20, 255, 196);
-    text-shadow: 1px 1px 1px  black;
-    margin-bottom:-16%;
-}
-
-.desconectada{
-
-    color: rgba(255, 254, 254, 0.897);
-
-}
-
-.walletid{
-    font-size: 10px;
 }
