--- a/client/src/components/datos/ProductDetail/ProductDetail.module.css
+++ b/client/src/components/datos/ProductDetail/ProductDetail.module.css
@@ -1,75 +1,108 @@
-.slide-in-left {
-    -webkit-animation: slide-in-left 2s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-    animation: slide-in-left 2s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-  }
+.container {
   
-  @-webkit-keyframes slide-in-left {
-    0% {
-      -webkit-transform: translateX(-1000px);
-      transform: translateX(-1000px);
-      opacity: 0;
-    }
-    100% {
-      -webkit-transform: translateX(0);
-      transform: translateX(0);
-      opacity: 1;
-    }
-  }
+  position: relative;
+  overflow: hidden;
+  margin-top: 4%;
+  height: 100vh;
+  width: 100%;
+}
+
+.title {
+  background-color: #005f6b98;
+  font-size: 50px;
+  padding-left: 2%;
+  color: #ffffff;
+  position: relative;
+  animation: slide-in-right 0.7s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
   
-  @keyframes slide-in-left {
-    0% {
-      -webkit-transform: translateX(-1000px);
-      transform: translateX(-1000px);
-      opacity: 0;
-    }
-    100% {
-      -webkit-transform: translateX(0);
-      transform: translateX(0);
-      opacity: 1;
-    }
+}
+
+
+@keyframes slide-in-right {
+  0% {
+    transform: translateX(-100%);
+    opacity: 0;
   }
-  
-  .slide-in-right {
-    -webkit-animation: slide-in-right 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-    animation: slide-in-right 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+  100% {
+    transform: translateX(0);
+    opacity: 1;
   }
-  
-  @-webkit-keyframes slide-in-right {
-    0% {
-      -webkit-transform: translateX(1000px);
-      transform: translateX(1000px);
-      opacity: 0;
-    }
-    100% {
-      -webkit-transform: translateX(0);
-      transform: translateX(0);
-      opacity: 1;
-    }
+}
+
+.productInfo {
+  display: flex;
+  align-items: center;
+  transition: transform 0.3s;
+}
+
+.productInfo:hover {
+ 
+  transform: scale(1.1);
+}
+
+.productImage {
+  flex: 0 0 40%;
+  animation: blur-in-expand 0.4s linear both;
+}
+
+@keyframes blur-in-expand {
+  0% {
+    transform: scale(0);
+    filter: blur(12px);
+    opacity: 0;
   }
-  
-  @keyframes slide-in-right {
-    0% {
-      -webkit-transform: translateX(1000px);
-      transform: translateX(1000px);
-      opacity: 0;
-    }
-    100% {
-      -webkit-transform: translateX(0);
-      transform: translateX(0);
-      opacity: 1;
-    }
+  100% {
+    transform: scale(1);
+    filter: blur(0);
+    opacity: 1;
   }
+}
+
+.productImage img {
+  padding: 2%;
+  width: 60%;
+  height: auto;
+  margin-left: 15%;
+  animation: rotate-vertical-center 1s;
+  transition: transform 0.3s;
+}
+
+.productImage img:hover {
   
-  .container {
-    background-color: #333333;
-    color: #ffffff;
+  transform: scale(1.1);
+}
+
+@keyframes rotate-vertical-center {
+  0% {
+    transform: rotateY(0);
   }
-  
-  .title {
-    color: #ffffff;
+  100% {
+    transform: rotateY(360deg);
   }
+}
+
+.description {
+  padding: 2%;
+  animation: slide-in-left 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+  font-size: 18px;
+  border: 6px solid aquamarine;
+  width: 50%;
   
-  .total {
-    color: #ffffff;
+}
+
+
+@keyframes slide-in-left {
+  0% {
+    transform: translateX(100%);
+    opacity: 0;
   }
-  
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+.productDetails h2 {
+  margin-top: 57%;
+  left: 27%;
+}
