--- a/client/src/components/datos/Bag/Bag.module.css
+++ b/client/src/components/datos/Bag/Bag.module.css
@@ -8,12 +8,10 @@
   background-color: rgba(0, 0, 0, 0.5);
 }
   .shopbag {
-    /* top: var(--navBarHeight); */
-    right: 0;
-    min-height: calc(90vh - var(--navBarHeight));
-    max-height: calc(90vh - var(--navBarHeight));
-    width: 25vw;
     position: fixed;
+    right: 0;
+    height: 100vh;
+    width: 25vw;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -21,7 +19,7 @@
     gap: 10px;
     z-index: 9999;
     overflow-y: auto;
-    animation: scale-up-horizontal-right 0.6s forwards;
+    animation: scale-up-horizontal-right 0.4s;
   } @keyframes scale-up-horizontal-right {
     0% {
       transform: scaleX(0.4);
@@ -41,6 +39,20 @@
   .shopbag-dark {
     background-color: #212121;
     box-shadow: rgba(0, 0, 0, 0.50) 20px 0 0;
+  }
+  .shopbagOpen {
+        animation: sdf 0.4 ;
+    } @keyframes sdf {
+        0% {
+            transform: scaleX(1);
+            transform-origin: left center;
+            opacity: 1;
+          }
+          100% {
+            transform: scaleX(0.4);
+            transform-origin: left center;
+            opacity: 0;
+          }
   }
 
 .item {
