--- a/client/src/components/views/MercadopagoFeedback/Success.module.css
+++ b/client/src/components/views/MercadopagoFeedback/Success.module.css
@@ -1,4 +1,83 @@
-.container{
- font-size: 30px;
- margin-top: 15%;
+.img{
+    width: 400;
+    height: 400;
+animation:blur-in-expand 1s linear both}
+ @keyframes blur-in-expand{0%{transform:scale(0);filter:blur(12px);opacity:0}100%{transform:scale(1);filter:blur(0);opacity:1}}
+
+.imgcontainer{
+    animation: rotate-vertical-center 1s linear forwards;
 }
+
+@keyframes rotate-vertical-center {
+  0% {
+    transform: rotateY(0);
+  }
+  100% {
+    transform: rotateY(1080deg);
+  }
+}
+
+.container2{
+animation:blur-in 2s linear both}
+ @keyframes blur-in{0%{filter:blur(12px);opacity:0}100%{filter:blur(0);opacity:1}}
+
+.container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    scale: 0.5;
+    width: 100%;
+    height: 100%;
+    margin-bottom: 40%;
+}
+
+.detalles{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    animation:blur-in 2s linear both} 
+    @keyframes blur-in{0%{filter:blur(12px);opacity:0}100%{filter:blur(0);opacity:1}}
+
+
+.detalles2{
+
+animation:bounce-top 3s linear both} 
+@keyframes bounce-top{0%{transform:translateY(-45px);
+    animation-timing-function:ease-in;
+    opacity:1}24%{opacity:1}40%{transform:translateY(-24px);
+    animation-timing-function:ease-in}65%{transform:translateY(-12px);
+    animation-timing-function:ease-in}82%{transform:translateY(-6px);
+    animation-timing-function:ease-in}93%{transform:translateY(-4px);
+    animation-timing-function:ease-in}25%,55%,75%,87%{transform:translateY(0);
+    animation-timing-function:ease-out}100%{transform:translateY(0);
+    animation-timing-function:ease-out;opacity:1}}
+
+
+    .h1{
+        font-size: 100px;
+    }
+
+    .idtransaccion{
+        font-size: 40px;
+    }
+
+    .tohome{
+        font-size: 40px;
+        text-decoration: none;
+        padding: 1%;
+        color: white;
+        background-color: rgb(23, 139, 139);
+        border-radius: 10%;
+    }
+
+    .x{
+        position: fixed;
+        top: -80%;
+        left: -20%;
+        color: rgb(255, 47, 47);
+        font-size: 400px;
+        animation:blur-in 3s linear both} 
+        @keyframes blur-in{0%{filter:blur(12px);opacity:0}100%{filter:blur(0);opacity:1}}
