--- a/client/src/components/views/Shop/Shop.module.css
+++ b/client/src/components/views/Shop/Shop.module.css
@@ -68,7 +68,7 @@
 
   .sidebar {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     flex-wrap: wrap;
     align-items: center;
     margin-bottom: 25px;
@@ -77,7 +77,7 @@
     border: 4px solid rgba(0, 0, 0, 0.096);
     background-color:#a1f7be7c;
     transition: transform 0.3s, filter 0.3s,width 0.2s;
-   border-radius: 5%;
+    border-radius: 5%;
    
   }
   .sidebar > div {
