--- a/client/src/components/datos/CourseCard/CourseCard.module.css
+++ b/client/src/components/datos/CourseCard/CourseCard.module.css
@@ -7,8 +7,7 @@
    @keyframes scale-up-horizontal-center{0%{transform:scaleX(.2)}100%{transform:scaleX(1)}}
 
 .card {
-  
-  padding: 10%;
+  /* padding: 10%; */
   width: 300px;
   height: 200px;
   perspective: 1000px;
@@ -26,7 +25,7 @@
 .front,
 .back {
   font-size: 18px;
-  padding: 2%;
+  /* padding: 2%; */
   width: 100%;
   height: 100%;
   position: absolute;
@@ -57,7 +56,6 @@
   align-items: center;
   position: fixed;
   top: -10%;
-
 }
 
 .description  {
