--- a/client/src/components/views/Shop/FilterBarShop.module.css
+++ b/client/src/components/views/Shop/FilterBarShop.module.css
@@ -1,29 +1,14 @@
 .sidebar {
     display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
     align-items: center;
-    margin-bottom: 25px;
-    height:25%;
-    width: 16.2%;
-    border: 4px solid rgba(0, 0, 0, 0.096);
-    background-color:#a1f7be7c;
+    justify-content: space-evenly;
+    height: 25%;
+    background: linear-gradient(to right, rgba(0, 180, 204, 0.623) 0%, rgba(161,247,190,1) 100%);
     transition: transform 0.3s, filter 0.3s,width 0.2s;
-    border-radius: 5%;
-   
+    border: 1px solid black;
   }
+  
   .sidebar > div {
-    margin-bottom: 15px;
+    height: 4rem;
   }
-  .sidebar:hover {
-    transform: scale(1.1);
-    width: 20%;
-    transform-origin: left;
-    }
-    
-   .sidebar input {
-      margin: 0;
-      width: 1rem;
-      cursor: pointer;
-      height: 1rem;
-    }
+  
