--- a/client/src/components/views/AdminPanel/Products.module.css
+++ b/client/src/components/views/AdminPanel/Products.module.css
@@ -93,7 +93,7 @@
   75% { transform: rotate(-10deg); }
 }
 
-.Form{
+.componentelocal{
   display: flex;
   flex-direction: column;
   align-items:center;
