--- a/client/src/components/views/AdminPanel/User.module.css
+++ b/client/src/components/views/AdminPanel/User.module.css
@@ -29,12 +29,8 @@
   
   /* Estilos para las celdas del cuerpo de la tabla */
   .Tabla tbody td {
-    
-    padding-left: 20px;
-background-color:  #2678d015;
-    padding-right: 20px;
+    margin: 0%;
     text-align:center;
-    vertical-align: middle;
     border-bottom: 1px solid  #2678d06c;
      justify-content: flex-start;
   }
@@ -49,7 +45,6 @@ background-color:  #2678d015;
   /* Estilos para las celdas del cuerpo de la tabla en la primera columna */
   .Tabla tbody td:first-child {
     border-left: 1px solid  #2678d06c;
- 
   }
   
   /* Estilos para las celdas del cuerpo de la tabla en la última columna */
@@ -71,4 +66,45 @@ background-color:  #2678d015;
     scale: 1.1;
     background-color: blue;
     color:bisque;
+  }
+
+  .componentelocal{
+    display: flex;
+    flex-direction: column;
+    align-items:center;
+    justify-content:center;
+    width: 100%;
+    border:2px solid white;
+    padding: 20px;
+    background-color: rgb(11, 138, 138);
+  }
+  
+  .h1{
+    display: flex;
+    justify-content: flex-start;
+    font-size: 20px;
+    padding:5px;
+    color: white;
+    margin-left: 10%;
+    
+  }
+  .input{
+    height: 20px;
+  }
+  .button{
+  
+   background-color:rgba(255, 255, 255, 0.637);
+  }
+  .button:hover{
+    cursor: pointer;
+    color: rgb(30, 167, 177);
+  }
+  
+  .subirimagen{
+    color:white;
+    padding: 20px;
+    width: 200px;
+  }
+  .extra{
+    margin-left: -10%;
   }
